--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.2
-	yarn_mappings=1.15.2+build.15
+	minecraft_version=20w19a
+	yarn_mappings=20w19a+build.6
 	loader_version=0.8.2+build.194
 
 # Mod Properties
-	mod_version = 1.2.0
+	mod_version = 1.3.0
 	maven_group = net.boot
 	archives_base_name = boot
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.10.0+build.305-1.15
+	fabric_version=0.10.7+build.344-1.16
