--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.5-SNAPSHOT'
+	id 'fabric-loom' version '0.6-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -10,7 +10,8 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
-minecraft {
+repositories {
+	maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -20,21 +21,15 @@ dependencies {
 	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Config
-	modApi("me.shedaniel.cloth:config-2:${project.cloth_config_version}") {
-      exclude(group: "net.fabricmc.fabric-api")
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
+    	exclude(group: "net.fabricmc.fabric-api")
   	}
-	include("me.shedaniel.cloth:config-2:${project.cloth_config_version}") {
-      exclude(group: "net.fabricmc.fabric-api")
+	include("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
+    	exclude(group: "net.fabricmc.fabric-api")
   	}
-	modApi("me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}") {
-      exclude(group: "net.fabricmc.fabric-api")
- 	}
-	include("me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}") {
-      exclude(group: "net.fabricmc.fabric-api")
- 	}
 	// Modmenu dev
 	modCompile "io.github.prospector:modmenu:${project.mod_menu_version}",{
-			exclude(group: "net.fabricmc.fabric-api")
+		exclude(group: "net.fabricmc.fabric-api")
 	}
 }
 
